# Snake

./: .gitignore  CMakeLists.txt  Game.cpp  Game.h  Main.cpp  README.md  Snake.sln  Snake.vcxproj  Snake.vcxproj.filters  Text.cpp  Text.h  Window.cpp  Window.h
src/: Game.cpp  Game.h  Logger.cpp  Logger.h  Text.cpp  Text.h  Window.cpp  Window.h  main.cpp  unique_ptrs_destructors.cpp  unique_ptrs_destructors.h
